--- a/SistemIuranBEMITD/src/main/resources/templates/Data/BendaharaKelas.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/Data/BendaharaKelas.html
@@ -137,12 +137,12 @@
                             </button>
                             <ul class="dropdown-menu dropdown-menu-right" role="menu">
                                 <li>
-                                    <a th:href="${'/data/viewdetail/' +mahasiswas.nim}" class="dropdown-item" title="View Detail">
+                                    <a th:href="${'/bendaharakelas/data/viewdetail/' +mahasiswas.nim}" class="dropdown-item" title="View Detail">
                                         <span class="fas fa-eye"> View Detail</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a th:href="${'/data/delete/' +mahasiswas.nim}" class="dropdown-item" title="Delete">
+                                    <a th:href="${'/bendaharakelas/data/delete/' +mahasiswas.nim}" class="dropdown-item" title="Delete">
                                         <span class="fas fa-trash"> Delete</span>
                                     </a>
                                 </li>
@@ -155,6 +155,7 @@
                 <a class="btn btn-info" href="/bendaharakelas/data/create" style="background: deepskyblue">Tambah Mahasiswa Baru</a>
             </div>
         </div>
+    </div>
 
         <footer class="sticky-footer" style="background: #f5f5f5">
             <div class="container my-auto">
