--- a/SistemIuranBEMITD/src/main/resources/templates/Form/formCreate.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/Form/formCreate.html
@@ -121,7 +121,7 @@
         <div class="container-fluid">
             <h4>Tambah Mahasiswa</h4>
             <br>
-            <form th:object="${mahasiswa}" th:action="@{/data/create}" method="post">
+            <form th:object="${mahasiswa}" th:action="@{/bendaharakelas/data/create}" method="post">
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">NIM</label>
                     <div class="col-sm-2">
@@ -132,23 +132,6 @@
                     <label class="col-sm-2 col-form-label">Nama Mahasiswa</label>
                     <div class="col-sm-2">
                         <input type="text" class="form-control" th:field="*{nama}"/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputJk" class="col-sm-2 col-form-label">Jenis Kelamin</label>
-                    <div class="col-sm-2">
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="inputJk" id="inputJk" value="Laki-Laki" th:field="*{jenis_kelamin}" required>
-                            <label class="form-check-label" for="inputJk">
-                                Laki-Laki
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="inputJk" id="inputJk" value="Perempuan" th:field="*{jenis_kelamin}" required>
-                            <label class="form-check-label" for="inputJk">
-                                Perempuan
-                            </label>
-                        </div>
                     </div>
                 </div>
                 <div class="form-group">
