--- a/SistemIuranBEMITD/src/main/resources/templates/Form/formCreateKelas.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/Form/formCreateKelas.html
@@ -81,27 +81,33 @@
             <li class="breadcrumb-item" style="background: #f5f5f5">
                 <a th:href="@{/bendaharabem/index}" style="color: deepskyblue" class="fas fa-home">   Home</a>
             </li>
+            <li class="breadcrumb-item">
+                <a th:href="@{/bendaharabem/data}" style="color:deepskyblue">Data Kelas</a>
+            </li>
             <li class="breadcrumb-item active">Create</li>
         </ol>
         <hr>
         <div class="containe r-fluid">
-            <h4>Buat Pengumuman</h4>
+            <h4>Kelas Baru</h4>
             <br>
-            <form th:object="${pengumuman}" th:action="@{/bendaharabem/pengumuman/create}" method="post">
-                <div class="form-group">
-                    <label class="col-sm-2 col-form-label">Judul pengumuman</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" th:field="*{judul}" required/>
+            <form th:object="${kelas}" th:action="@{/bendaharabem/data/create}" method="post">
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Kode Kelas</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{nama_kelas}"/>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-2 col-form-label">Isi pengumuman</label>
-                    <div class="col-sm-8">
-                        <textarea class="form-control" rows="5" th:field="*{isi}" required></textarea>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Fakultas</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{fakultas}"/>
                     </div>
                 </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-default" style="background: deepskyblue">Save</button>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Iuran</label>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:field="*{iuran}"/>
+                    </div>
                 </div>
             </form>
         </div>
