--- a/SistemIuranBEMITD/src/main/resources/templates/detailMahasiswa.html
+++ b/SistemIuranBEMITD/src/main/resources/templates/detailMahasiswa.html
@@ -42,37 +42,11 @@
 
     <!-- Navbar -->
     <ul class="navbar-nav ml-auto ml-md-8">
-        <li class="nav-item dropdown no-arrow mx-1">
-            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: deepskyblue">
-                <i class="fas fa-bell fa-fw"></i>
-                <span class="badge badge-danger"></span>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-        </li>
-        <li class="nav-item dropdown no-arrow mx-1">
-            <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: deepskyblue">
-                <i class="fas fa-envelope fa-fw"></i>
-                <span class="badge badge-danger"></span>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="messagesDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-        </li>
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: deepskyblue">
                 <i class="fas fa-user-circle fa-fw"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="#">Activity Log</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
             </div>
@@ -85,25 +59,20 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav" style="background: white">
         <li class="nav-item active">
-            <a class="nav-link" th:href="@{/index}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/bendaharakelas/index}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-tachometer-alt" style="color: deepskyblue"></i>
                 <span>Dashboard</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/payment}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/bendaharakelas/payment}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-money-bill" style="color: deepskyblue"></i>
                 <span>Payment</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:href="@{/data}" style="color: deepskyblue">
+            <a class="nav-link" th:href="@{/bendaharakelas/data}" style="color: deepskyblue">
                 <i class="fas fa-fw fa-database" style="color: deepskyblue"></i>
                 <span>Data Mahasiswa</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/pengumuman}" style="color: deepskyblue">
-                <i class="fas fa-fw fa-newspaper" style="color: deepskyblue"></i>
-                <span>Pengumuman</span></a>
         </li>
     </ul>
 
@@ -111,9 +80,9 @@
     <div id="content-wrapper">
         <ol class="breadcrumb" style="background: #f5f5f5">
             <li class="breadcrumb-item" style="background: #f5f5f5">
-                <a th:href="@{/index}" style="color: deepskyblue" class="fas fa-home">  Home</a>
+                <a th:href="@{/bendaharakelas/index}" style="color: deepskyblue" class="fas fa-home">  Home</a>
             </li>
-            <li class="breadcrumb-item active">Payment</li>
+            <li class="breadcrumb-item active">Mahasiswa</li>
         </ol>
         <hr>
         <div class="container-fluid">
